[package]
name = "eip712-signature"
version = "0.1.0"
authors = ["Vladyslav-Bochok <vladbochok1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.3.1", features = ["serde"] }
hex = "0.4"
tiny-keccak = "1.4.2"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
itertools = "0.9"
async-trait = "0.1"
once_cell = "1.7"

# Crypto stuff
web3 = "0.13.0"
parity-crypto = {version = "0.6.2", features = ["publickey"] }
ethabi = "12.0.0"

[dev-dependencies]
lazy_static = "1.4.0"
criterion = "0.3.0"
web3 = "0.13.0"
secp256k1 = {version = "0.17.2", features = ["std", "recovery"] }
bincode = "1.3"

