[package]
name = "eip712-signature"
version = "0.1.0"
authors = ["Vladyslav-Bochok <vladbochok1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.16.0"
parity-crypto = {version = "0.8.0", features = ["publickey"] }
thiserror = "1.0"
